# conrast

./: .gitignore  CMakeLists.txt  README.md  todo.md
Color/: CMakeLists.txt  Color.hpp
Mesh/: Line.hpp  Triangle.cpp  Vertex.hpp
Surface/: CMakeLists.txt  ConsoleSurface.cpp  ConsoleSurface.hpp
Utils/: Vec.hpp
src/: main.cpp
src/color/: Color.cpp  Color.hpp
src/mesh/: Line.hpp  Mesh.cpp  Mesh.hpp  Triangle.hpp  Vertex.cpp  Vertex.hpp
src/rasterizer/: PerspectiveCamera.cpp  PerspectiveCamera.hpp  Rasterizer.cpp  Rasterizer.hpp
src/render/: FragmentShader.cpp  FragmentShader.hpp  Framebuffer.cpp  Framebuffer.hpp  GBuffer.cpp  GBuffer.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp
src/surface/: ConsoleSurface.cpp  ConsoleSurface.hpp  ImageSurface.cpp  ImageSurface.hpp  RenderTarget.cpp  RenderTarget.hpp  Surface.cpp  Surface.hpp
src/utils/: Geometry.cpp  Geometry.hpp  Matrix.hpp  Vec.cpp  Vec.hpp
